hphp/test/quick/clsmethod-ctx.php.expectf
Private in a

Fatal error: Call to private method a::priv from anonymous context in %s on line 15
